# Chess-AI

./: .gitignore  Board.cpp  Board.h  BoardTest.cpp  CMakeLists.txt  Chess.pro  Move.cpp  Move.h  MoveGenerator.cpp  MoveGeneratorTest.cpp  MoveTest.cpp  Piece.cpp  README.md  VectorUtil.cpp  VectorUtil.h  chessboard.cpp  chessboard.h  dragwidget.cpp  dragwidget.h  game_manager.cpp  game_manager.h  game_state.h  icon.cpp  icon.h  main.cpp  mainwindow.cpp  mainwindow.h  promotion_dialog.cpp  promotion_dialog.h  resources.qrc  threadpool.cpp  threadpool.h  ui_piece.cpp  ui_piece.h  zobrist_hash_generator.cpp  zobrist_hash_generator.h  zobrist_hash_generator_test.cpp
src/main/: Board.cpp  Board.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Piece.h  VectorUtil.h  analysis_info_display.cpp  analysis_info_display.h  chessboard.cpp  chessboard.h  game_manager.cpp  game_manager.h  main.cpp  mainwindow.cpp  move_generation_strategy.cpp  move_generation_strategy.h  move_processor.cpp  move_processor.h  piece_ui.cpp  piece_ui.h  promotion_dialog.cpp  promotion_dialog.h  zobrist_hash_generator.h
src/main/ai/: MoveGenerator.cpp  MoveGenerator.h  ai_settings.h  analysis_info.h  constants.cpp  constants.h  deep_evaluation_strategy.cpp  deep_evaluation_strategy.h  evaluation.cpp  evaluation.h  evaluation_update_strategy.cpp  evaluation_update_strategy.h  move_evaluation_data.h  move_generator.cpp  move_generator.h  move_sorting.cpp  move_sorting.h  search_captures.cpp  search_captures.h  single_depth_move_generator.cpp  single_depth_move_generator.h  square_value_tables.cpp  square_value_tables.h  transposition.h  transposition_table.cpp  transposition_table.h  transpositions.cpp  transpositions.h
src/main/ai/deepevalstrategy/: base.cpp  base.h  parallel.cpp  parallel.h  parallel_pvs.cpp  parallel_pvs.h  parallel_pvs_with_sequential_children.cpp  parallel_pvs_with_sequential_children.h  pvs.cpp  pvs.h  sequential.cpp  sequential.h  sequential_deep_evaluation_strategy.cpp  sequential_deep_evaluation_strategy.h
src/main/board/: Board.cpp  Board.h  Move.cpp  Move.h  Piece.cpp  Piece.h  board.cpp  board.h  board_squares.cpp  board_squares.h  board_util.cpp  board_util.h  move.cpp  move.h  move_processor.cpp  move_processor.h  piece.cpp  piece.h  zobrist_hash_generator.cpp  zobrist_hash_generator.h
src/main/move/: move.cpp  move.h  visitors.cpp  visitors.h
src/main/ui/: analysis_info_display.cpp  analysis_info_display.h  chessboard.cpp  chessboard.h  game_manager.cpp  game_manager.h  mainwindow.cpp  mainwindow.h  piece_ui.cpp  piece_ui.h  promotion_dialog.cpp  update_analysis_info_event.h
src/main/util/: thread_util.h  vector_util.h
src/test/: BoardTest.cpp  CMakeLists.txt  MoveGeneratorTest.cpp  MoveTest.cpp  string_util.cpp  string_util.h  zobrist_hash_generator_test.cpp
src/test/ai/: MoveGeneratorTest.cpp  deep_evaluation_strategy_test.cpp  move_generator_test.cpp
src/test/board/: BoardTest.cpp  MoveTest.cpp  board_integrated_test.cpp  board_squares_test.cpp  board_test.cpp  board_unit_test.cpp  board_util_test.cpp  move_count_test.cpp  move_test.cpp  piece_test.cpp  zobrist_hash_generator_test.cpp
src/test/util/: string_util_test.cpp  vector_util_test.cpp
